Fixed aria-hidden and active classes; now appear on all visible slides

--- a/client/scss/components/_numbered_list.scss
+++ b/client/scss/components/_numbered_list.scss
@@ -138,7 +138,7 @@ $numbered-list-number-size: 96px;
   }
 
   .numbered-list__item {
-    min-width: 300px;
+    min-width: 350px;
     border-width: 0 1px 0 0;
   }
 
